<resources>
    <string name="app_name">A3-MODULO3-DANIEL-ROMERO</string>
    <string name="convertir">Convertir</string>
    <string name="convertidora_de_divisas">Convertidora de Divisas</string>
    <string name="eur">EUR</string>
    <string name="total">-</string>
    <string name="clp">CLP</string>
    <string name="EUR_to_CLP_view" />

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>